network-policy/senario-1/deny-all-allow-dns-coredns.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all-allow-dns-coredns
  namespace: app
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
  egress:
  - to:
      - namespaceSelector: {}
        podSelector:
          matchLabels:
            k8s-app: kube-dns          
    ports:
    - protocol: TCP
      port: 53
    - protocol: UDP
      port: 53
