network-policy/senario-1/deny-all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all-app-namespace
  namespace: app
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
